results/scraper/box64/2674
falied to build a statically linked box64 in termux
My English are bad,sorry

**Environment**
Device: Redmi k70 pro
soc: Snapdragon 8Gen3
Android Version: 14
box64 version：0.3.5
termux-info
![Screenshot_2025-05-26-21-36-26-395_com.termux.jpg](https://github.com/user-attachments/assets/6c8c6a9e-1e63-44f8-9bac-3a5fd92a17fa)


**Build command**
cmake .. -DSTATICBUILD=ON -DARM_DYNAREC=ON -DTERMUX=1 -DCMAKE_C_COMPILER=clang -DCMAKE_BUILD_TYPE=RelWithDebInfo

**Error log**

[ 96%] Building C object CMakeFiles/mainobj.dir/src/wrapped/wrappedldlinux.c.o                                        [ 96%] Building C object CMakeFiles/mainobj.dir/src/wrapped/wrappedlibc.c.o                                           [ 97%] Building C object CMakeFiles/mainobj.dir/src/wrapped/wrappedlibcmusl.c.o                                       [ 97%] Building C object CMakeFiles/mainobj.dir/src/wrapped/wrappedlibdl.c.o                                          In file included from /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibc.c:3886:                          /data/data/com.termux/files/home/box64/src/libtools/static_libc.h:4:10: fatal error: 'aliases.h' file not found           4 | #include <aliases.h>                                     |          ^~~~~~~~~~~                               [ 97%] Building C object CMakeFiles/mainobj.dir/src/wrapped/wrappedlibm.c.o                                           1 error generated.                                         make[2]: *** [CMakeFiles/mainobj.dir/build.make:865: CMakeFiles/mainobj.dir/src/wrapped/wrappedlibc.c.o] Error 1      make[2]: *** Waiting for unfinished jobs....               In file included from /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibdl.c:20:                           /data/data/com.termux/files/home/box64/src/elfs/elfloader_private.h:155:9: warning: 'R_X86_64_JUMP_SLOT' macro redefined [-Wmacro-redefined]                                       155 | #define R_X86_64_JUMP_SLOT      7       /* Create PLT entry */
      |         ^                                          /data/data/com.termux/files/usr/include/elf.h:293:9: note: previous definition is here                                  293 | #define R_X86_64_JUMP_SLOT R_X86_64_JMP_SLOT             |         ^                                          In file included from /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm.c:222:                           In file included from /data/data/com.termux/files/home/box64/src/wrapped/wrappedlib_init.h:68:                        /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:78:5: error: call to undeclared library function 'clog' with type '_Complex double (_Complex double)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]                         78 | GOW(clog, XFX)                                           |     ^                                              /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:78:5: note: include the header <complex.h> or explicitly provide a declaration for 'clog'               /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:85:5: error: call to undeclared library function 'clogf' with type '_Complex float (_Complex float)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]                          85 | GOW(clogf, xFx)                                          |     ^                                              /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:85:5: note: include the header <complex.h> or explicitly provide a declaration for 'clogf'              /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:101:5: error: call to undeclared library function 'cpow' with type '_Complex double (_Complex double, _Complex double)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]      101 | GOW(cpow, XFXX)                                          |     ^                                              /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:101:5: note: include the header <complex.h> or explicitly provide a declaration for 'cpow'              /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:102:5: error: call to undeclared library function 'cpowf' with type '_Complex float (_Complex float, _Complex float)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]        102 | GOW(cpowf, xFxx)                                         |     ^
/data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:102:5: note: include the header <complex.h> or explicitly provide a declaration for 'cpowf'             /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:136:5: error: use of undeclared identifier 'exp10'                                                        136 | GOW(exp10, dFd)                                          |     ^                                              /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:137:5: error: use of undeclared identifier 'exp10f'                                                       137 | GOW(exp10f, fFf)                                         |     ^                                              /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:176:4: error: call to undeclared library function '__finitef' with type 'int (float)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]                                        176 | GO(__finitef, iFf)                                       |    ^                                               /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:176:4: note: include the header <math.h> or explicitly provide a declaration for '__finitef'            /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:196:4: error: use of undeclared identifier '__fpclassify'                                                 196 | GO(__fpclassify, iFd)                                    |    ^
/data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:197:4: error: use of undeclared identifier '__fpclassifyf'                                                197 | GO(__fpclassifyf, iFf)                                   |    ^                                               /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:320:4: error: call to undeclared library function 'roundeven' with type 'double (double)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  320 | GO(roundeven, dFd)  //since C23                          |    ^                                               /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:320:4: note: include the header <math.h> or explicitly provide a declaration for 'roundeven'            /data/data/com.termux/files/home/box64/src/wrapped/wrappedlibm_private.h:321:4: error: call to undeclared library function 'roundevenf' with type 'float (float)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]                                     321 | GO(roundevenf, fFf)     